This patch does a few related things: #removes a lot of unused and weird stuff from problemreporter #all parser activation decisions are moved back into cppsupport where it belongs, problemreporter is just UI #fixes flickering problem tabs #fixes a case where  already open documents don't get a problem icon marker #fixes sorting so it happens numerically, no lexographically #afaik fixes repeated entries. if this still happens, I don't think problem reporter is responsible #afaik fixes the remaining cases where the parser could be invoked against non-c/c++ files

BUG: 111341
BUG: 117621
BUG: 131716
BUG: 135958